objects/vlocity_ins__VlocityScheduledJob__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__AsyncApexJobId__c</fullName>
        <label>Apex Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BatchSize__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataSourceData__c</fullName>
        <label>Data Source Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataSourceSpec__c</fullName>
        <label>Data Source Spec</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataSourceType__c</fullName>
        <label>Data Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Query</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsInputAsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Input As List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JobQueue__c</fullName>
        <label>Job Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastRunDateTime__c</fullName>
        <label>Last Run DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastRunErrorMessage__c</fullName>
        <label>Last Run Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NextRunDateTime__c</fullName>
        <label>Next Run DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessName__c</fullName>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessType__c</fullName>
        <label>Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Integration Procedure</fullName>
                </value>
                <value>
                    <fullName>Vlocity Open Interface</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity Scheduled Job</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Scheduled Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>